# falcon-game-math

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  DocumentationGuideline.md  Doxyfile  Folder.DotSettings  README.md  TODO.md  build.bat  dependencies.cmake  runTests.bat  simdcheck.cmake
apps/rasterizer/: CMakeLists.txt  Main.cpp
apps/rasterizer/application/: Application.h  Renderer.h
apps/rasterizer/parsers/: ObjectParser.h
benchmarks/fgm/: CMakeLists.txt
include/: CMakeLists.txt
include/falcon_simd/: FalconSimd.cmake  SIMDMemory.h  SIMDMemory.tpp
include/falcon_simd/utils/: Utils.cmake
include/fgm/: DoxygenGroups.h  FGM.cmake  Mat  Vec
include/fgm/common/: Common.cmake  Config.h  Constants.h  MathTraits.h  OperationStatus.h  PreprocessorDefinitions.h  Types.h
include/fgm/matrices/: Mat2.h  Mat2.tpp  Mat2x3.h  Mat2x3.tpp  Mat2x4.h  Mat2x4.tpp  Mat3.h  Mat3.tpp  Mat3x2.h  Mat3x2.tpp  Mat3x4.h  Mat3x4.tpp  Mat4.h  Mat4.tpp  Mat4x2.h  Mat4x2.tpp  Mat4x3.h  Mat4x3.tpp  MatMul.h  MatMul.tpp  Matrices.cmake  Matrix2.h  Matrix2.tpp  Matrix2x3.h  Matrix2x3.tpp  Matrix3.h  Matrix3.tpp  Matrix4.h  Matrix4.tpp
include/fgm/vectors/: Tensors.h  Vec2.h  Vec2.tpp  Vec3.h  Vec3.tpp  Vec4.h  Vec4.tpp  Vector2.h  Vector2.tpp  Vector3.h  Vector3.tpp  Vector4.h  Vector4.tpp  Vectors.cmake
include/rasterizer-demo/: CMakeLists.txt
include/rasterizer-demo/include/: Application.h  Mesh.h  Renderer.h
include/rasterizer-demo/src/: main.cpp
math-lib/: CMakeLists.txt
math-lib/include/: Config.h  DoxygenGroups.h  MathTraits.h  SimdTraits.h
math-lib/include/common/: Config.h  Constants.h  MathTraits.h  Messages.h  OperationStatus.h  PreprocessorDefinitions.h  Types.h  Utils.h  Utils.tpp  Wrappers.h  Wrappers.tpp
math-lib/include/fgm/: Mat  Vec
math-lib/include/fgm/common/: PreprocessorDefinitions.h  Types.h  Utils.h
math-lib/include/fgm/matrices/: Matrix2.h  Matrix2.tpp  Matrix2D.h  Matrix2D.tpp  Matrix3.h  Matrix3.tpp  Matrix3D.h  Matrix4.h  Matrix4.tpp  Matrix4D.h  Matrix4D.tpp
math-lib/include/fgm/vectors/: Vector2.h  Vector2.tpp  Vector2D.h  Vector2D.tpp  Vector3.h  Vector3.tpp  Vector3D.h  Vector4.h  Vector4.tpp  Vector4D.h
math-lib/include/matrix/: Matrix2D.h  Matrix2D.tpp  Matrix3D.h  Matrix3D.tpp  Matrix4D.h  Matrix4D.tpp
math-lib/include/vector/: Vector2D.h  Vector2D.tpp  Vector3D.h  Vector3D.tpp  Vector4D.h  Vector4D.tpp
math-lib/include/vectors/: Vector2D.h  Vector2D.tpp  Vector3D.h  Vector3D.tpp  Vector4D.h  Vector4D.tpp
math-test/: CMakeLists.txt
math-test/include/: CommonSetup.h  DoxygenGroups.h  Vector3DTestSetup.h  Vector3TestSetup.h  Vector4DTestSetup.h  Vector4TestSetup.h
math-test/include/utils/: MatrixUtils.h  VectorUtils.h
math-test/src/: HeaderAliasTests.cpp
math-test/src/common/: MathTraitTests.cpp  TrivialTypeTests.cpp
math-test/src/matrices/matrix2x2/: AccessAndMutationTests.cpp  ConstantTests.cpp  InverseTests.cpp  MultiplicationTests.cpp  TraceTests.cpp  TransformationFactoryTests.cpp
math-test/src/matrices/matrix3x3/: AccessAndMutationTests.cpp  ConstantTests.cpp  DivisionTests.cpp  InitializationTests.cpp  InverseTests.cpp  MultiplicationTests.cpp  SubtractionTests.cpp  TransposeTests.cpp
math-test/src/matrices/matrix4x4/: AccessAndMutationTests.cpp  ConstantTests.cpp  DivisionTests.cpp  InverseTests.cpp  TransformationFactoryTests.cpp  TypeConversionTests.cpp
math-test/src/matrix/matrix2x2/: AccessAndMutationTests.cpp  AdditionTests.cpp  AliasTests.cpp  ConstantTests.cpp  DeterminantTests.cpp  DivisionTests.cpp  EqualityTests.cpp  InitializationTests.cpp  InverseTests.cpp  MultiplicationTests.cpp  StringRepresentationTests.cpp  SubtractionTests.cpp  TraceTests.cpp  TransformationFactoryTests.cpp  TransposeTests.cpp  TypeConversionTests.cpp  UtilityTests.cpp
playground/: CMakeLists.txt
playground/diagram/: Requirements.md
playground/include/: Application.h  Mesh.h  Renderer.h
playground/include/parsers/: ObjectParser.h
playground/src/: main.cpp
simd/: CMakeLists.txt
simd-test/: CMakeLists.txt
simd-test/include/: CommonSetup.h  DoxygenGroups.h  SIMDTestSetup.h
simd-test/include/utils/: FloatEquals.h
simd-test/src/: RegisterTypeTests.cpp  SimdUtilsTests.cpp
simd/include/: DoxygenGroups.h  SIMD.h  SIMDUtils.h
simd/include/simd/: SIMD.h  SIMDMemory.h  SIMDMemory.tpp
simd/include/utils/: SIMDUtils.h
src/: CMakeLists.txt
src/fgm/: CMakeLists.txt
src/fgm/include/: SimdTraits.h
src/playground/include/: Renderer.h
src/rasterizer-demo/: CMakeLists.txt
src/rasterizer-demo/include/: Renderer.h
src/simd/: CMakeLists.txt
src/simd/include/: DoxygenGroups.h
test-suite/: CMakeLists.txt
test-suite/include/: CommonSetup.h  DoxygenGroups.h  MatrixTestSetup.h  SIMDTestSetup.h  Vector2DTestSetup.h  Vector3DTestSetup.h  Vector4DTestSetup.h
test-suite/include/utils/: FloatEquals.h  MatrixUtils.h  VectorUtils.h
test-suite/src/math/: HeaderAliasTests.cpp
test-suite/src/matrix/: Matrix2DTests.cpp  Matrix3DTests.cpp  Matrix4DTests.cpp
test-suite/src/simd/: InitializationTests.cpp  RegisterTypeTests.cpp  SimdUtilsTests.cpp
test-suite/src/utils/: VectorUtils.h
test-suite/src/vector/: Vector4DTests.cpp
test-suite/src/vectors/: Vector2DTests.cpp  Vector3DTests.cpp  Vector4DTests.cpp
tests/: CMakeLists.txt
tests/falcon_simd/: CMakeLists.txt
tests/falcon_simd/include/: SIMDTestSetup.h
tests/falcon_simd/utils/: CMakeLists.txt  SimdUtilsTests.cpp
tests/fgm/: CMakeLists.txt  HeaderAliasTests.cpp
tests/fgm/common/: CMakeLists.txt  OperationStatusTests.cpp  TrivialTypeTests.cpp  UtilsTests.cpp
tests/fgm/include/: CommonSetup.h  DoxygenGroups.h  Mat2TestSetup.h  Mat2x3TestSetup.h  Mat2x4TestSetup.h  Mat3TestSetup.h  Mat3x2TestSetup.h  Mat3x4TestSetup.h  Mat4TestSetup.h  Mat4x2TestSetup.h  Mat4x3TestSetup.h  Matrix2x3TestSetup.h  MatrixTestSetup.h  Vec2TestSetup.h  Vec3TestSetup.h  Vec4TestSetup.h  Vector2TestSetup.h
tests/fgm/src/: HeaderAliasTests.cpp
tests/simd/: CMakeLists.txt
tests/simd/src/: RegisterTypeTests.cpp  SimdUtilsTests.cpp
(+1518 files in other folders)
